--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
                                 <div class="text-sm text-gray-600">Complete database in .xlsx format</div>
                             </div>
                         </div>
-                        <a href="#" class="text-orange-600 hover:text-orange-700 font-semibold">
+                        <a href="data/NYC_Restaurants_For_Meetings_DataEntry.xlsx" class="text-orange-600 hover:text-orange-700 font-semibold">
                             <i class="fas fa-download mr-2"></i>Download
                         </a>
                     </div>
@@ -585,7 +585,7 @@
                                 <div class="text-sm text-gray-600">Universal format for easy import</div>
                             </div>
                         </div>
-                        <a href="#" class="text-orange-600 hover:text-orange-700 font-semibold">
+                        <a href="data/NYC_Restaurants_For_Meetings_DataEntry.csv" class="text-orange-600 hover:text-orange-700 font-semibold">
                             <i class="fas fa-download mr-2"></i>Download
                         </a>
                     </div>
