--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
                                 <div class="text-sm text-gray-600">Cloud-based collaborative document</div>
                             </div>
                         </div>
-                        <a href="#" class="text-orange-600 hover:text-orange-700 font-semibold">
+                        <a href="https://docs.google.com/spreadsheets/d/1cPz8RP1vGk1jK-GhrhBZXl6kp_3MC44hq84XoeUfBQ4/edit?gid=0#gid=0" class="text-orange-600 hover:text-orange-700 font-semibold">
                             <i class="fas fa-external-link-alt mr-2"></i>Open
                         </a>
                     </div>
