--- a/index.html
+++ b/index.html
@@ -294,12 +294,41 @@
             <h1>🍽️ NYC Restaurants Data Entry Project</h1>
             <p class="subtitle">Best Restaurants for Meetings in New York City</p>
             
-            <div class="screenshot-section">
-                <h3>📸 Original Spreadsheet Data</h3>
-                <div class="screenshot-wrapper">
-                    <canvas id="screenshotCanvas"></canvas>
+            <!-- Original Spreadsheet Screenshot -->
+            <div class="mb-8 bg-white rounded-xl shadow-lg overflow-hidden">
+                <div class="bg-gradient-to-r from-orange-500 to-red-500 text-white px-6 py-4">
+                    <div class="flex items-center justify-between">
+                        <div class="flex items-center space-x-3">
+                            <i class="fas fa-file-excel text-2xl"></i>
+                            <div>
+                                <h3 class="text-lg font-bold">Original Spreadsheet</h3>
+                                <p class="text-sm text-orange-100">View the actual data entry work in Excel format</p>
+                            </div>
+                        </div>
+                        <span class="badge bg-white text-orange-600 px-4 py-2">Excel/Google Sheets</span>
+                    </div>
                 </div>
-                <p class="screenshot-note">Original data compiled from TripAdvisor in spreadsheet format</p>
+                <div class="p-6">
+                    <div class="border-4 border-gray-200 rounded-lg overflow-hidden">
+                        <!-- Placeholder for screenshot - Replace with actual image -->
+                        <img src="img/NYC_Restaurants_For_Meetings_DataEntry_GoogleSheet.png" alt="NYC Restaurants Excel Spreadsheet" class="w-full" 
+                             onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
+                        <div class="bg-gradient-to-br from-gray-50 to-gray-100 p-12 text-center" style="display: none;">
+                            <i class="fas fa-table text-6xl text-gray-300 mb-4"></i>
+                            <p class="text-gray-500 mb-2 font-semibold">Original Excel Spreadsheet Screenshot</p>
+                            <p class="text-sm text-gray-400">Upload screenshot as: <code class="bg-gray-200 px-2 py-1 rounded">data/nyc-restaurants-screenshot.png</code></p>
+                        </div>
+                    </div>
+                    <div class="mt-4 flex items-center justify-between text-sm text-gray-600">
+                        <div class="flex items-center space-x-2">
+                            <i class="fas fa-info-circle text-blue-600"></i>
+                            <span>Original data entry work showing all 20 restaurants with complete information</span>
+                        </div>
+                        <a href="#" class="text-orange-600 hover:text-orange-700 font-semibold">
+                            <i class="fas fa-expand-alt mr-2"></i>View Full Size
+                        </a>
+                    </div>
+                </div>
             </div>
 
             <div class="project-info">
