--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                             <i class="fas fa-info-circle text-blue-600"></i>
                             <span>Original data entry work showing all 20 restaurants with complete information</span>
                         </div>
-                        <a href="#" class="text-orange-600 hover:text-orange-700 font-semibold">
+                        <a href="img/NYC_Restaurants_For_Meetings_DataEntry_GoogleSheet.png" class="text-orange-600 hover:text-orange-700 font-semibold">
                             <i class="fas fa-expand-alt mr-2"></i>View Full Size
                         </a>
                     </div>
@@ -217,7 +217,7 @@
                             <p class="text-sm text-gray-600">Searchable table showing restaurant ratings and reviews</p>
                         </div>
                         <span class="badge bg-orange-100 text-orange-700 px-3 py-1">
-                            <i class="fas fa-shield-alt mr-1"></i>Privacy Compliant
+                            <i class="fas fa-shield-alt mr-1"></i> Privacy Compliant
                         </span>
                     </div>
                 </div>
