--- a/index.html
+++ b/index.html
@@ -386,6 +386,8 @@
                                 <td class="px-4 py-3 text-center"><span class="badge bg-blue-100 text-blue-700">407</span></td>
                                 <td class="px-4 py-3 text-center"><a href="http://www.trinityplacenyc.com/" target="_blank" class="text-orange-600 hover:text-orange-700"><i class="fas fa-external-link-alt"></i></a></td>
                             </tr>
+                             </tbody>
+                         </tr>
                             <tr class="hover:bg-gray-50">
                                 <td class="px-4 py-3">11</td>
                                 <td class="px-4 py-3 font-semibold">John's Coffee Shop</td>
