--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                     <table class="w-full">
                         <thead class="bg-gradient-to-r from-orange-500 to-red-500 text-white">
                             <tr>
-                                <th class="px-4 py-3 text-left font-semibold">#</th>
+                                <th class="px-4 py-3 text-left font-semibold">No.</th>
                                 <th class="px-4 py-3 text-left font-semibold">Restaurant Name</th>
                                 <th class="px-4 py-3 text-center font-semibold">Rating</th>
                                 <th class="px-4 py-3 text-left font-semibold">Address</th>
@@ -391,8 +391,8 @@
                 </div>
                 <div class="p-4 bg-gray-50 border-t text-center text-sm text-gray-600">
                     <i class="fas fa-download mr-2"></i>
-                    Download: <a href="data/NYC_Restaurants.csv" download class="text-orange-600 hover:underline font-semibold">CSV</a> | 
-                    <a href="data/NYC_Restaurants.xlsx" download class="text-orange-600 hover:underline font-semibold">Excel</a>
+                    Download: <a href="data/NYC_Restaurants_For_Meetings_DataEntry.csv" download class="text-orange-600 hover:underline font-semibold">CSV</a> | 
+                    <a href="data/NYC_Restaurants_For_Meetings_DataEntry.xlsx" download class="text-orange-600 hover:underline font-semibold">Excel</a> | <a href="img/NYC_Restaurants_For_Meetings_DataEntry.png" download class="text-orange-600 hover:underline font-semibold">Google Drive</a>
                 </div>
             </div>
         </div>
