--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                             <i class="fas fa-info-circle text-blue-600"></i>
                             <span>Original spreadsheet with restaurant ratings and customer reviews</span>
                         </div>
-                        <a href="#" class="text-orange-600 hover:text-orange-700 font-semibold">
+                        <a href="img/NYC_Restaurants_For_Meetings_DataEntry_GoogleSheet.png" class="text-orange-600 hover:text-orange-700 font-semibold">
                             <i class="fas fa-expand-alt mr-2"></i>View Full Size
                         </a>
                     </div>
